package structural.decorator;

public abstract class BasePizza {
    public abstract int cost();
}
