package structural.decorator;

public class Farmhouse extends BasePizza {
    @Override
    public int cost() {
        return 200;
    }
}
