package structural.decorator;

public class VegDelight extends BasePizza {
    @Override
    public int cost() {
        return 250;
    }
}
